--- a/wangyiyun/src/main/views/rank.html
+++ b/wangyiyun/src/main/views/rank.html
@@ -84,16 +84,17 @@
         el: '#header',
         data: {
             activeIndex : '3',
+            baseUrl: "http://localhost:63342/Web-Crawler/wangyiyun/src/main/views"
         },
         methods: {
             goDiscover: function () {
-                window.location.href = "http://localhost:63342/Web-Crawler/wangyiyun/src/main/views/index.html";
+                window.location.href = this.baseUrl + "/index.html";
             },
             goRank: function () {
-                window.location.href = "http://localhost:63342/Web-Crawler/wangyiyun/src/main/views/rank.html";
+                window.location.href = this.baseUrl + "/rank.html";
             },
             goStory: function () {
-                window.location.href = "http://localhost:63342/Web-Crawler/wangyiyun/src/main/views/story.html";
+                window.location.href = this.baseUrl + "/story.html";
             }
         }
     });
@@ -106,8 +107,8 @@
         },
         created: function () {
             axios.get("http://localhost:8090/music/song/rank").then(function (response) {
-                console.log(response.data);
-                rank.rankSongs = response.data;
+                console.log(response.data.data);
+                rank.rankSongs = response.data.data;
             })
         }
     })
